# tokenfool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  fast-checks.yml  full-tests.yml  pr-agent.yml  publish.yml  python-publish.yml
adapters/: interfaces.py
attacks/: patchfool.py  utils.py
examples/: deit_patchfool.ipynb  hf_vit_patchfool.ipynb  timm_deit_patchfool.ipynb  timm_deit_pnapo.ipynb  timm_vit_att.ipynb
tests/: helpers.py  test_att.py  test_patchfool.py  test_pna_patchout.py  test_timm_vit_adapter.py  test_timm_vit_adapter_integration.py
tokenfool/adapters/: __init__.py  hf_vit.py  interfaces.py  timm_vit.py  vision_transformer.py
tokenfool/attacks/: __init__.py  att.py  patchfool.py  pna_patchout.py
