[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenfool"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
]

[project.optional-dependencies]
lint = [
  "ruff",
]

typecheck = [
  "mypy",
]

test = [
  "pytest",
]

dev = [
  "ruff",
  "mypy",
  "pytest",
  "timm",
  "torchvision",
  "matplotlib",
  "tqdm",
  "ipywidgets",
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenfool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]