[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenfool"
version = "0.1.1"
authors = [
  { name="Allison Lane", email="lane_allison@trustthink.net"}
]
readme = "README.md"
requires-python = ">=3.10"
license="MIT"
license-files = ["LICENSE"]
dependencies = [
  "torch",
]

[project.optional-dependencies]
test = [
  "pytest",
]

integration = [
  "timm",
]

dev = [
  "ruff",
  "mypy",
  "pytest",
  "timm",
  "transformers",
  "torchvision",
  "matplotlib",
  "tqdm",
  "ipywidgets",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenfool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that use real timm models or other heavier dependencies",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"examples/**/*.ipynb" = ["S310"]